Opened 11 years ago

Closed 9 years ago

#10574 closed bug (fixed)

Red, Green, and Blue color fields don't display correctly in Icon-O-Matic

Reported by: jscipione Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/Icon-O-Matic Version: R1/alpha4.1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The red, green, and blue fields (picked with the R, G, and B radio buttons) don't display right in the color picker of Icon-O-Matic.

I've attached a screenshot to this ticket showing how it looks in Icon-O-Matic and Colors! where it draws correctly.

Attachments (1)

Icon-O-Matic Bug.png (30.4 KB ) - added by jscipione 11 years ago.
Screenshot comparing the Red field in the Icon-O-Matic vs. Colors!

Download all attachments as: .zip

Change History (2)

by jscipione, 11 years ago

Attachment: Icon-O-Matic Bug.png added

Screenshot comparing the Red field in the Icon-O-Matic vs. Colors!

comment:1 by stippi, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev49421.

Note: See TracTickets for help on using tickets.