src/apps/icon-o-matic/generic/gui/panel/color_picker/ColorField.h
@@ -1,21 +1,17 @@
-/* 
+/*
  * Copyright 2001 Werner Freytag - please read to the LICENSE file
  *
  * Copyright 2002-2006, Stephan Aßmus <superstippi@gmx.de>
  * All rights reserved.
- *		
+ *
  */
 
-#ifndef _COLOR_FIELD_H
-#define _COLOR_FIELD_H
+#ifndef COLOR_FIELD_H
+#define COLOR_FIELD_H
 
 #include <Control.h>
 
-#if LIB_LAYOUT
-#  include <layout.h>
-#endif
-
-#include "selected_color_mode.h"
+#include "SelectedColorMode.h"
 
 enum {
 	MSG_COLOR_FIELD		= 'ColF',
@@ -23,69 +19,76 @@ enum {
 
 class BBitmap;
 
-class ColorField :
-				   #if LIB_LAYOUT
-				   public MView,
-				   #endif
-				   public BControl {
- public:
+class ColorField : public BControl {
+public:
 								ColorField(BPoint offset_point,
-										   selected_color_mode mode,
-										   float fixed_value,
-										   orientation orient = B_VERTICAL);
+									SelectedColorMode mode, float fixedValue,
+									orientation orient = B_VERTICAL,
+									border_style border = B_FANCY_BORDER);
+
+								ColorField(SelectedColorMode mode,
+									float fixedValue,
+									orientation orient = B_VERTICAL,
+									border_style border = B_FANCY_BORDER);
+
 	virtual						~ColorField();
 
-								// MView
-	#if LIB_LAYOUT
-	virtual	minimax				layoutprefs();
-	virtual	BRect				layout(BRect frame);
-	#endif
+	// BControl interface
+	virtual	BSize				MinSize();
+	virtual	BSize				PreferredSize();
+	virtual	BSize				MaxSize();
 
-								// BControl
-	virtual	status_t			Invoke(BMessage *msg = NULL);
+	virtual	status_t			Invoke(BMessage* message = NULL);
 
 	virtual	void				AttachedToWindow();
 	virtual	void				Draw(BRect updateRect);
+	virtual	void				FrameResized(float width, float height);
 
 	virtual	void				MouseDown(BPoint where);
 	virtual	void				MouseUp(BPoint where);
 	virtual	void				MouseMoved(BPoint where, uint32 code,
-										   const BMessage* message);
+									const BMessage* dragMessage);
 
-								// ColorField
-			void				Update(int depth);
-
-			void				SetModeAndValue(selected_color_mode mode, float fixed_value);
-			void				SetFixedValue(float fixed_value);
+	// ColorField
+			void				SetModeAndValue(SelectedColorMode mode,
+									float fixedValue);
+			void				SetFixedValue(float fixedValue);
 			float				FixedValue() const
 									{ return fFixedValue; }
-			
-			void				SetMarkerToColor( rgb_color color );
-			void				PositionMarkerAt( BPoint where );
+
+			void				SetMarkerToColor(rgb_color color);
+			void				PositionMarkerAt(BPoint where);
 
 			float				Width() const;
 			float				Height() const;
 			bool				IsTracking() const
 									{ return fMouseDown; }
 
- private:
-	static	status_t				_UpdateThread(void* data);
-			void				_DrawBorder();
+private:
+			void				_Init(SelectedColorMode mode,
+									float fixedValue, orientation orient,
+									border_style border);
 
-	selected_color_mode			fMode;
+			void				_AllocBitmap(int32 width, int32 height);
+			void				_Update();
+			BRect				_BitmapRect() const;
+			void				_FillBitmap(BBitmap* bitmap,
+									SelectedColorMode mode,
+									float fixedValue, orientation orient) const;
+
+private:
+	SelectedColorMode			fMode;
 	float						fFixedValue;
 	orientation					fOrientation;
+	border_style				fBorderStyle;
 
 	BPoint						fMarkerPosition;
 	BPoint						fLastMarkerPosition;
 
 	bool						fMouseDown;
 
-	BBitmap*					fBgBitmap[2];
-	BView*						fBgView[2];
-
-	thread_id					fUpdateThread;
-	port_id						fUpdatePort;
+	BBitmap*					fBitmap;
+	bool						fBitmapDirty;
 };
 
-#endif
+#endif // COLOR_FIELD_H
